--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
-spring.datasource.password=Harsh@123
+spring.datasource.password=1234
 
 #Hibernate properties
 spring.jpa.show-sql=true
