--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port = 8081
+server.port = 8080
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Harsh@123
 
 #Hibernate properties
 spring.jpa.show-sql=true
