--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 server.port = 8081
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student
+spring.datasource.url=jdbc:mysql://mysqldb:3306/student
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 #Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger-ui.enabled=true
+spring.profiles.active=docker
