--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port = 8081
+server.port = 8080
 
 
-spring.datasource.url=jdbc:mysql://172.30.10.199:3306/student
+spring.datasource.url=jdbc:mysql://127.0.0.1:1234/student
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=user1
@@ -9,7 +9,7 @@ spring.datasource.password=1234
 
 #Hibernate properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger-ui.enabled=true
 spring.profiles.active=docker
