--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port = 8080
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:1234/student
+# spring.datasource.url=jdbc:mysql://127.0.0.1:1234/student
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.username=user1
-spring.datasource.password=1234
+# spring.datasource.username=user1
+# spring.datasource.password=1234
 
 #Hibernate properties
 spring.jpa.show-sql=true
